# src/routes/user_routes.js
@@ -4,66 +4,8 @@ import { register, login } from "../controllers/user_controller.js";
 
 const router = express.Router();
 
-/**
- * @swagger
- * /api/auth/register:
- *   post:
- *     summary: Register a new user
- *     tags: [Auth]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               username:
- *                 type: string
- *               password:
- *                 type: string
- *             required:
- *               - username
- *               - password
- *     responses:
- *       201:
- *         description: User registered successfully
- *       400:
- *         description: Bad request
- *       500:
- *         description: Internal server error
- */
 router.post("/register", register);
 
-/**
- * @swagger
- * /api/auth/login:
- *   post:
- *     summary: Log in an existing user
- *     tags: [Auth]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               username:
- *                 type: string
- *               password:
- *                 type: string
- *             required:
- *               - username
- *               - password
- *     responses:
- *       200:
- *         description: User logged in successfully
- *       401:
- *         description: Unauthorized
- *       400:
- *         description: Bad request
- *       500:
- *         description: Internal server error
- */
 router.post("/login", login);
 
 export default router;
